@@ -12,9 +12,16 @@
 #include "KMLIconStyleParser.h"
 #include "KMLIconStyle.h"
 
-KMLIconStyleParser::KMLIconStyleParser( KMLIconStyle& iconStyle )
-  : KMLColorStyleParser( iconStyle )
+namespace
+{
+    const QString ICON_STYLE_TAG        = "iconstyle";
+    const QString ICON_TAG              = "icon";
+    const QString HREF_TAG              = "href";
+}
 
+KMLIconStyleParser::KMLIconStyleParser( KMLIconStyle& iconStyle )
+  : KMLColorStyleParser( iconStyle ),
+    m_phase( IDLE )
 {
 }
 
@@ -27,8 +34,26 @@ bool KMLIconStyleParser::startElement( const QString& namespaceURI,
         return false;
     }
 
-    //TODO
-    return true;
+    bool result = KMLColorStyleParser::startElement( namespaceURI, localName, name, atts );
+
+    if ( ! result ) {
+        QString lowerName = name.toLower();
+
+        if ( lowerName == ICON_STYLE_TAG ) {
+            result = true;
+            qDebug("KMLColorStyleParser: Start to parse IconStyle");
+        }
+        else if ( lowerName == ICON_TAG ) {
+            m_phase = WAIT_ICON;
+            result = true;
+        }
+        else if ( lowerName == HREF_TAG ) {
+            m_phase = WAIT_HREF;
+            result = true;
+        }
+    }
+
+    return result;
 }
 
 bool KMLIconStyleParser::endElement( const QString& namespaceURI,
@@ -39,7 +64,36 @@ bool KMLIconStyleParser::endElement( const QString& namespaceURI,
         return false;
     }
 
-    //TODO
+    bool result = KMLColorStyleParser::endElement( namespaceURI, localName, qName );
+
+    if ( ! result ) {
+        QString lowerName = qName.toLower();
+
+        switch ( m_phase ) {
+            case IDLE:
+                if ( lowerName == ICON_STYLE_TAG ) {
+                    m_parsed = true;
+                    result = true;
+                    qDebug("KMLColorStyleParser: IconStyle parsed");
+                }
+                break;
+            case WAIT_ICON:
+                if ( lowerName == ICON_TAG ) {
+                    m_phase = IDLE;
+                    result = true;
+                }
+                break;
+            case WAIT_HREF:
+                if ( lowerName == HREF_TAG ) {
+                    m_phase = WAIT_ICON;
+                    result = true;
+                }
+                break;
+            default:
+                break;
+        }
+    }
+
     return true;
 }
 
@@ -49,6 +103,20 @@ bool KMLIconStyleParser::characters( const QString& ch )
         return false;
     }
 
-    //TODO
-    return true;
+    bool result = KMLColorStyleParser::characters( ch );
+
+    if ( ! result ) {
+        switch ( m_phase ) {
+            case WAIT_HREF:
+                /*
+                 * TODO
+                 */
+                result = true;
+                break;
+            default:
+                break;
+        }
+    }
+
+    return result;
 }
